MyBookmarks/static/style.css
body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
                 'Microsoft YaHei New', 'Microsoft Yahei', 微软雅黑, 宋体, SimSun, STXihei, 华文细黑, sans-serif;
}

.topbar {
    position: fixed;
    top: 0px;
    z-index: 2;
    width: 100%;
    height: 70px;
    background-color: #1a73e8;
}

.brand {
    padding-left: 20px;
    font-size: 25px;
    letter-spacing: .3px;
    color: white;
}

.brand:hover {
    color: white;
    text-decoration: none;
}

.topbar .nav-link {
    padding-left: 8px;
    padding-right: 8px;
    color: white !important;
}

.topbar .link:hover {
    background: rgba(255,255,255,.2);
    border-radius: 5px;
}

.login {
    width: 250px;
    margin: 0 auto 20px;
}

.d-inline-flex {
    margin: 0 20px 20px;
}

form.login {
    padding: 0;
}

.sidebar {
    position: fixed;
    top: 0;
    z-index: 1;
    height: 100%;
    width: 250px;
    padding-top: 70px;
}

.category-menu {
    height: 100%;
    width: 100%;
    padding-top: 10px;
    overflow-x: hidden;
    overflow-y: auto;
    border-right: 1px solid #e9ecef;
    flex-basis: 100%;
    background-color: white;
}

.category-menu .btn {
    margin-left: 6px;
}

.category-menu .navbar-brand {
    text-indent: 6px;
}

.category-menu .navbar-nav {
    text-indent: 20px;
}

.category-menu .nav-link {
    color: rgba(0,0,0,.7) !important;
}

.category-menu .nav-link:hover {
    background-color: rgb(232, 232, 232);
}

.category-menu .nav-link.active {
    font-weight: bold;
}

.content {
    position: fixed;
    top: 0;
    padding-top: 90px;
    height: 100%;
    width: 100%;
}

header {
    height: 100px;
}

.table-responsive {
    height: calc(100% - 100px);
    padding: 0 10px;
}

table {
    table-layout: fixed;
}

th {
    position: sticky;
    top: 0;
    border-top: 0 !important;
    border-bottom: 0 !important;
    background-color: white;
}

th:nth-of-type(1) {
    width: 200px;
}
th:nth-of-type(3) {
    width: 200px;
}
th:nth-of-type(4) {
    width: 80px;
}

td {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

form {
    padding: 0 20px;
}

.form-control {
    width: 250px;
}

.btn-danger {
    margin-top: 8px;
}

.material-icons {
    font-size: 18px;
}

@media (min-width: 901px) {
    .category-menu {
        display: block !important;
    }

    .navbar-toggler {
        display: none;
    }
}

@media (max-width: 900px) {
    .content {
        padding-left: 0 !important;
    }
}

@media (max-width: 700px) {
    th:nth-of-type(1) {
        width: 120px;
    }
    th:nth-of-type(3) {
        width: 120px;
    }
    th:nth-of-type(4) {
        width: 40px;
    }
}

